trying different y variables for trade

--- a/food_trade/flow_prediction/check_distributions.ipynb
+++ b/food_trade/flow_prediction/check_distributions.ipynb
@@ -42,10 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_country_log_false_thresh_10 = pd.read_parquet('../../data/combined_features/df_country_log_false_thresh_10.parquet.gzip')\n",
-    "df_country_log_true_thresh_10 = pd.read_parquet('../../data/combined_features/df_country_log_true_thresh_10.parquet.gzip')\n",
-    "df_country_log_false_thresh_pt001 = pd.read_parquet('../../data/combined_features/df_country_log_false_thresh_pt001.parquet.gzip')\n",
-    "df_country_log_true_thresh_pt001 = pd.read_parquet('../../data/combined_features/df_country_log_true_thresh_pt001.parquet.gzip')"
+    "df_country_log_false_thresh_10 = pd.read_parquet('../../data/combined_features/using_supply_mat/df_country_log_false_thresh_10.parquet.gzip')\n",
+    "df_country_log_true_thresh_10 = pd.read_parquet('../../data/combined_features/using_supply_mat/df_country_log_true_thresh_10.parquet.gzip')\n",
+    "df_country_log_false_thresh_pt001 = pd.read_parquet('../../data/combined_features/using_supply_mat/df_country_log_false_thresh_pt001.parquet.gzip')\n",
+    "df_country_log_true_thresh_pt001 = pd.read_parquet('../../data/combined_features/using_supply_mat/df_country_log_true_thresh_pt001.parquet.gzip')"
    ]
   },
   {
@@ -55,8 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = df_country_log_true_thresh_10\n",
     "trade = df.groupby(['to_iso3']).sum()[['trade']].reset_index().rename(columns={'trade': 'imports', 'to_iso3': 'iso3'}).merge(\n",
-    "    df.groupby(['from_iso3']).sum()[['trade']].reset_index().rename(columns={'trade': 'exports', 'from_iso3': 'iso3'}))"
+    "    df.groupby(['from_iso3']).sum()[['trade']].reset_index().rename(columns={'trade': 'exports', 'from_iso3': 'iso3'}), how='outer')\n",
+    "trade = trade.fillna(0)"
    ]
   },
   {
