--- a/food_trade/flow_prediction/validation.ipynb
+++ b/food_trade/flow_prediction/validation.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7fb17984-8708-4c67-adba-85968979f365",
    "metadata": {},
    "outputs": [],
@@ -3433,120 +3433,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "57f9af71-0b7c-4728-b172-48ead98d2d37",
+   "execution_count": 12,
+   "id": "605e96da-3699-48d9-b27e-eef0bcec83ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    120.000000\n",
-       "mean       0.221713\n",
-       "std        0.177672\n",
-       "min        0.000000\n",
-       "25%        0.057572\n",
-       "50%        0.174906\n",
-       "75%        0.359846\n",
-       "max        0.590206\n",
+       "count    111.000000\n",
+       "mean       0.804953\n",
+       "std        0.156512\n",
+       "min        0.482873\n",
+       "25%        0.686029\n",
+       "50%        0.838026\n",
+       "75%        0.952341\n",
+       "max        1.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = master_df_country[((master_df_country['cereals_all_prod'] - master_df_country['cereals_all_outflows']) / master_df_country['cereals_all_cons'])>0.4]\n",
-    "(d['cereals_all_inflows'] / d['cereals_all_cons']).describe()"
+    "d = master_df_country[(master_df_country['cereals_all_prod']>master_df_country['cereals_all_cons']*0.5)]\n",
+    "((d['cereals_all_prod'] - d['cereals_all_outflows']) / d['cereals_all_cons']).describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "f0fe97d9-6385-4921-8870-1b1bc5a050ee",
+   "execution_count": 22,
+   "id": "5a506ba2-e861-4f70-ae59-1bab276df155",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    75.000000\n",
-       "mean      0.889200\n",
-       "std       0.120718\n",
-       "min       0.640752\n",
-       "25%       0.782921\n",
-       "50%       0.935934\n",
-       "75%       0.996712\n",
-       "max       1.000000\n",
+       "count    23.000000\n",
+       "mean      0.690379\n",
+       "std       0.166546\n",
+       "min       0.372951\n",
+       "25%       0.578798\n",
+       "50%       0.682598\n",
+       "75%       0.792335\n",
+       "max       1.024522\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = master_df_country[((master_df_country['cereals_all_prod'] - master_df_country['cereals_all_outflows']) / master_df_country['cereals_all_cons'])<=0.4]\n",
-    "(d['cereals_all_inflows'] / d['cereals_all_cons']).describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "e24ed360-bf6f-4054-b265-d557e91b267b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    75.000000\n",
-       "mean      0.113229\n",
-       "std       0.121867\n",
-       "min       0.000000\n",
-       "25%       0.003289\n",
-       "50%       0.065274\n",
-       "75%       0.224042\n",
-       "max       0.371588\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(d['cereals_all_prod'] / d['cereals_all_cons']).describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "60559c26-4435-4b98-9294-8bffb7b72d0f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    75.000000\n",
-       "mean      0.002429\n",
-       "std       0.006853\n",
-       "min       0.000000\n",
-       "25%       0.000000\n",
-       "50%       0.000036\n",
-       "75%       0.000809\n",
-       "max       0.041497\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(d['cereals_all_outflows'] / d['cereals_all_cons']).describe()"
+    "d = df_india.drop_duplicates('from_id').rename(columns={'from_id': 'ID'})\n",
+    "d['cereals_all_prod'] = d[['from_barley_production', 'from_maize_production', 'from_millet_production', \n",
+    "                          'from_rice_production', 'from_sorghum_production', 'from_wheat_production', \n",
+    "                          'from_other_cereals_production']].sum(axis=1)\n",
+    "d = d[['ID', 'cereals_all_prod']]\n",
+    "d = d.merge(\n",
+    "    df_india.groupby('from_id')[['supply_cereals_all']].sum().reset_index().rename(\n",
+    "        columns={'from_id': 'ID', 'supply_cereals_all': 'cereals_all_outflows'})\n",
+    ")\n",
+    "d = d.merge(\n",
+    "    df_india.groupby('to_id')[['supply_cereals_all']].sum().reset_index().rename(\n",
+    "        columns={'to_id': 'ID', 'supply_cereals_all': 'cereals_all_inflows'})\n",
+    ")\n",
+    "d['cereals_all_cons'] = d['cereals_all_prod'] + d['cereals_all_inflows'] - d['cereals_all_outflows']\n",
+    "d = d[(d['cereals_all_prod']>d['cereals_all_cons']*0.5)]\n",
+    "((d['cereals_all_prod'] - d['cereals_all_outflows']) / d['cereals_all_cons']).describe()"
    ]
   },
   {
